--- a/results/results_point.ipynb
+++ b/results/results_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "4a77d2a6",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "446ab868",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "5a65613b",
    "metadata": {},
    "outputs": [
@@ -121,6 +121,22 @@
        "      <td>1280.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1021.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>835.0</td>\n",
        "      <td>848.0</td>\n",
@@ -170,33 +186,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>55</th>\n",
-       "      <td>835.0</td>\n",
-       "      <td>859.0</td>\n",
-       "      <td>898.0</td>\n",
-       "      <td>938.0</td>\n",
-       "      <td>1005.0</td>\n",
-       "      <td>926.0</td>\n",
-       "      <td>923.0</td>\n",
-       "      <td>1033.0</td>\n",
-       "      <td>1033.0</td>\n",
-       "      <td>1136.0</td>\n",
-       "      <td>1396.0</td>\n",
-       "      <td>1364.0</td>\n",
-       "      <td>1426.0</td>\n",
+       "      <td>833.0</td>\n",
+       "      <td>848.0</td>\n",
+       "      <td>916.0</td>\n",
+       "      <td>847.0</td>\n",
+       "      <td>864.0</td>\n",
+       "      <td>877.0</td>\n",
+       "      <td>1021.0</td>\n",
+       "      <td>1069.0</td>\n",
+       "      <td>1099.0</td>\n",
+       "      <td>1086.0</td>\n",
+       "      <td>1129.0</td>\n",
+       "      <td>1651.0</td>\n",
+       "      <td>1158.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Best Method</th>\n",
+       "      <td>55.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>55.0</td>\n",
        "      <td>33.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>33.0</td>\n",
-       "      <td>33.0</td>\n",
+       "      <td>55.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>44.0</td>\n",
        "    </tr>\n",
@@ -209,21 +225,23 @@
        "1            1433.0  1435.0  1441.0  1468.0  1446.0  1487.0  1624.0  1512.0   \n",
        "2             835.0   843.0   877.0   845.0   947.0   968.0   927.0   928.0   \n",
        "3             835.0   843.0   877.0   845.0   947.0   968.0   927.0   928.0   \n",
+       "4               NaN     NaN     NaN     NaN     NaN     NaN  1021.0     NaN   \n",
        "22            835.0   848.0  1115.0   993.0   889.0  1001.0  1238.0  1063.0   \n",
        "33            835.0   851.0   907.0   899.0   915.0  1052.0   910.0   983.0   \n",
        "44            835.0   850.0   918.0   849.0   866.0   880.0   999.0  1105.0   \n",
-       "55            835.0   859.0   898.0   938.0  1005.0   926.0   923.0  1033.0   \n",
-       "Best Method     2.0     2.0     2.0     2.0    44.0    44.0    33.0     2.0   \n",
+       "55            833.0   848.0   916.0   847.0   864.0   877.0  1021.0  1069.0   \n",
+       "Best Method    55.0     2.0     2.0     2.0    55.0    55.0    33.0     2.0   \n",
        "\n",
        "n_robots         10      11      12      13      14  \n",
        "1            2601.0  1584.0  1682.0  1718.0     NaN  \n",
        "2             991.0  1288.0  1684.0  1108.0  1280.0  \n",
        "3             991.0  1288.0  1684.0  1108.0  1280.0  \n",
+       "4               NaN     NaN     NaN     NaN     NaN  \n",
        "22           1175.0  1229.0  1442.0  1362.0  1351.0  \n",
        "33            997.0  1042.0  1185.0  1224.0  1258.0  \n",
        "44           1115.0  1073.0  1202.0  1141.0  1141.0  \n",
-       "55           1033.0  1136.0  1396.0  1364.0  1426.0  \n",
-       "Best Method     2.0    33.0    33.0     2.0    44.0  "
+       "55           1099.0  1086.0  1129.0  1651.0  1158.0  \n",
+       "Best Method     2.0    33.0    55.0     2.0    44.0  "
       ]
      },
      "metadata": {},
@@ -247,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "1e179cfe",
    "metadata": {},
    "outputs": [
@@ -257,7 +275,7 @@
        "-84.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
